@@ -3763,3 +3763,5 @@ Changelog for GXemul:
 		correctly in the case the branch was _not_ taken.
 20081204	Interrupt exceptions (in cpu_dyntrans.c) are no longer
 		generated while single-stepping. (It was too annoying.)
+20081206	Implementing rudimentary tx/rx interrupts for clmpcc;
+		OpenBSD/mvme88k can input/output stuff in userland now :)
